# DaniCli

./: Cargo.toml  README.md
dani_cli/: Cargo.toml
dani_cli/src/: main.rs
dani_cli_metadata/: Cargo.toml
dani_cli_metadata/src/: lib.rs
pathy/: Cargo.toml
pathy/src/: blueprint.rs  helpers.rs  lib.rs  pathy_start.rs
prelude/: Cargo.toml
prelude/src/: lib.rs
to_seperate_zips/: Cargo.toml
zipper/: Cargo.toml
zipper/src/: blueprint.rs  helpers.rs  lib.rs  types.rs
