[package]
name = "dani_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = { version = "0.70.1", features = ["pretty_env_logger"] }
clap = { version = "4.2.7", features = ["derive"] }

prelude = { path = "../prelude" }
pathy = { path = "../pathy" }
zipper ={ path = "../zipper"}
